[gd_scene load_steps=33 format=2]

[ext_resource path="res://src/entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://src/entities/components/Movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/components/EventHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/player/PlayerControls.gd" type="Script" id=4]
[ext_resource path="res://src/entities/player/AnimationController.gd" type="Script" id=5]
[ext_resource path="res://assets/entities/player.png" type="Texture" id=6]
[ext_resource path="res://src/resources/PhysicsAttributes.gd" type="Script" id=7]
[ext_resource path="res://assets/entities/blink.png" type="Texture" id=8]
[ext_resource path="res://src/entities/player/PlayerPhysics.gd" type="Script" id=11]
[ext_resource path="res://src/entities/components/PlayerMovement.gd" type="Script" id=12]
[ext_resource path="res://src/entities/components/PlayerEvents.gd" type="Script" id=15]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="Resource" id=2]
script = ExtResource( 7 )
FLOOR_MAX_ANGLE = 46.0
FLOOR_FULL_SPEED_ANGLE = 46.0
jump_height = 0.3
jump_length = 5.0
accel_run = 62.0
decel_run = 45.0
accel_air = 90.0
decel_air = 30.0
decel_knockback = 60.0
accel_gravity = 42.0
accel_jump = 25.0
max_run_speed = 6.0
COYOTE_TIME = 0.05
DROPTHROUGH_TIME = 0.3

[sub_resource type="Resource" id=3]
script = ExtResource( 7 )
FLOOR_MAX_ANGLE = 46.0
FLOOR_FULL_SPEED_ANGLE = 46.0
jump_height = 1.0
jump_length = 5.0
accel_run = 62.0
decel_run = 45.0
accel_air = 45.0
decel_air = 20.0
decel_knockback = 80.0
accel_gravity = 90.0
accel_jump = 40.0
max_run_speed = 10.0
COYOTE_TIME = 0.05
DROPTHROUGH_TIME = 0.3

[sub_resource type="Resource" id=4]
script = ExtResource( 7 )
FLOOR_MAX_ANGLE = 46.0
FLOOR_FULL_SPEED_ANGLE = 46.0
jump_height = 0.2
jump_length = 5.0
accel_run = 8.0
decel_run = 8.0
accel_air = 8.0
decel_air = 8.0
decel_knockback = 60.0
accel_gravity = 15.0
accel_jump = 5.0
max_run_speed = 1.5
COYOTE_TIME = 0.05
DROPTHROUGH_TIME = 0.3

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 20, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 20, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 60, 0, 20, 24 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "swim",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "hurt",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=16]

[sub_resource type="Animation" id=17]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.454902 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.6 ), Vector2( 1.5, 0.5 ), Vector2( 1e-05, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 6 ), Vector2( 0, -15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.39, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=20]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Animations:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 2 ), Vector2( 1.5, 0.5 ), Vector2( 1.4, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animations:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ), Vector2( 0, 6 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D" groups=[
"entity",
"player",
]]
material = SubResource( 1 )
collision_layer = 64
script = ExtResource( 1 )

[node name="Movement" parent="." instance=ExtResource( 2 )]
script = ExtResource( 12 )
Physics = SubResource( 2 )

[node name="NormalPhysics" type="Node2D" parent="Movement"]
script = ExtResource( 11 )
Physics = SubResource( 3 )

[node name="WaterPhysics" type="Node2D" parent="Movement"]
script = ExtResource( 11 )
Physics = SubResource( 4 )

[node name="EventHandler" parent="." instance=ExtResource( 3 )]
script = ExtResource( 15 )

[node name="PlayerControls" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="SlashBuffer" type="Timer" parent="PlayerControls"]
wait_time = 0.12
one_shot = true

[node name="JumpBuffer" type="Timer" parent="PlayerControls"]
wait_time = 0.1
one_shot = true

[node name="ProjectileBuffer" type="Timer" parent="PlayerControls"]
wait_time = 0.1
one_shot = true

[node name="ProjectileCooldown" type="Timer" parent="PlayerControls"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ProjectileRecoil" type="Timer" parent="PlayerControls"]
wait_time = 0.25
one_shot = true

[node name="Animations" type="AnimatedSprite" parent="."]
use_parent_material = true
position = Vector2( 0, -12 )
frames = SubResource( 14 )
animation = "idle"
frame = 1
playing = true
script = ExtResource( 5 )

[node name="Blink" type="Sprite" parent="Animations"]
position = Vector2( -2, -4 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="BlinkTimer" type="Timer" parent="Animations"]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 16 )
anims/oscillate = SubResource( 17 )
anims/shake = SubResource( 18 )
anims/warp = SubResource( 19 )
anims/warp_in = SubResource( 20 )

[node name="MagnetTracker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetTracker"]
position = Vector2( 0, -6 )
shape = SubResource( 21 )
[connection signal="facing_changed" from="Movement" to="Animations" method="_on_Movement_facing_changed"]
[connection signal="movement_state_changed" from="Movement" to="Animations" method="_on_Movement_movement_state_changed"]
[connection signal="movement_state_changed" from="Movement" to="." method="_on_Movement_movement_state_changed"]
[connection signal="timeout" from="PlayerControls/ProjectileRecoil" to="PlayerControls" method="_on_ProjectileRecoil_timeout"]
[connection signal="frame_changed" from="Animations" to="Animations" method="_on_Animations_frame_changed"]
[connection signal="timeout" from="Animations/BlinkTimer" to="Animations" method="_on_BlinkTimer_timeout"]
